--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,15 @@
 {
-    "name": "NAVDatabase.Amx.IiyamaLExx40SeriesDisplay",
-    "description": "NetLinx module for Iiyama LExx40 Series Displays",
+    "name": "NAVDatabase.Amx.IiyamaLExx40SSeriesDisplay",
+    "description": "NetLinx module for Iiyama LExx40S Series Displays",
     "version": "1.0.0",
     "license": "MIT",
     "files": ["src/*.axs", "src/*.tko", "lib/*.axi", "SymLink.ps1", "LICENSE", "README.md"],
     "repository": {
         "type": "git",
-        "url": "https://github.com/Norgate-AV/NAVDatabase.Amx.IiyamaLExx40SeriesDisplay.git"
+        "url": "https://github.com/Norgate-AV/NAVDatabase.Amx.IiyamaLExx40SSeriesDisplay.git"
     },
     "bugs": {
-        "url": "https://github.com/Norgate-AV/NAVDatabase.Amx.IiyamaLExx40SeriesDisplay/issues"
+        "url": "https://github.com/Norgate-AV/NAVDatabase.Amx.IiyamaLExx40SSeriesDisplay/issues"
     },
     "dependencies": [
         {
